fix: merge cavern user allocation